# mitmproxyman

./: hello.py  pyproject.toml  test_profile.yaml
mitmproxyman/: manager.py
mitmproxyman/dataclasses/: cookie.py  profile.py
mitmproxyman/utils/: cookies.py  file_loaders.py
scripts/: replace_cookies_using_profiles.py
src/dataclasses/: profile.py
src/loaders/: profile_loaders.py
tests/: conftest.py
tests/utils/: test_cookies.py
